--- a/code/glucocheck/homepage/templates/account/signup.html
+++ b/code/glucocheck/homepage/templates/account/signup.html
@@ -144,8 +144,9 @@
     form_fields[2].placeholder='Email..';
     form_fields[3].placeholder='Enter password...';
     form_fields[4].placeholder='Re-enter Password...';
-    form_fields[5].placeholder='Birth Date.';
-    form_fields[6].placeholder='State...';
+    form_fields[5].placeholder='Gender...'
+    form_fields[6].placeholder='Birth Date.';
+    form_fields[7].placeholder='State...';
 
 
     for (var field in form_fields){	
