--- a/code/glucocheck/homepage/static/form/style.css
+++ b/code/glucocheck/homepage/static/form/style.css
@@ -32,11 +32,28 @@
 	padding-bottom: 5px;
 }
 
+
+
 /*Size input boxes*/
 .row input {
 	box-sizing: border-box;
 	height: 32px;
 	width: 320px;
+}
+/*Size the checkbox input*/
+.row input[type=checkbox] {
+	box-sizing: border-box;
+	height: 15px;
+	width: 15px;
+	margin-top: 8px;
+}
+/*Size and center the accompanying text for the CheckBoxLink widget*/
+.row .column p {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	margin-top: 8px;
+	margin-left: 5px;
 }
 /*Size select boxes*/
 .row select {
