--- a/code/glucocheck/homepage/templates/account/login_extra.html
+++ b/code/glucocheck/homepage/templates/account/login_extra.html
@@ -1,3 +1,3 @@
 <div class="row">
-	<p class="no_icon">Don't have an account?&emsp;</t><a href="{% url 'signup' %}">Sign-Up</a></p>
+	<p class="no_icon">Don't have an account?&emsp;<a href="{% url 'signup' %}">Sign-Up</a></p>
 </div>
