--- a/code/glucocheck/homepage/templates/account/activation_sent.html
+++ b/code/glucocheck/homepage/templates/account/activation_sent.html
@@ -1,5 +1,5 @@
 {% extends "base/base.html" %}
 
 {% block content %}
-<h3> Activation link sent! Please check your email.</h3>
+<h3> Activation link sent! Please check your email and activate your account.</h3>
 {% endblock %}
