Fixed the email authentication Added a message template for displaying the activation pages Modified the views to work with the template Removed unused files added a helper function to retrieve the account navigation label for the header

--- a/code/glucocheck/homepage/templates/base/base.html
+++ b/code/glucocheck/homepage/templates/base/base.html
@@ -18,12 +18,12 @@
 			<i>some slogan here w/ extra styling</i>
 			<!--Nav Items-->
 			<ul>
-				{% if active == 'Sign-In/Up' %}
-					<li><a class='active' href="{% url 'login' %}">{{username}}</a></li> <!--Either "Welcome username" or "Sign-In/Up" depending on if the user is signed in-->
+				{% if active == 'Login' %}
+					<li><a class='active' href="{% url 'login' %}">{{account_nav}}</a></li> <!--Either "Welcome username" or "Sign-In/Up" depending on if the user is signed in-->
 				{% else %}
-					<li><a href="{% url 'login' %}">{{username}}</a></li> <!--Either "Welcome username" or "Sign-In/Up" depending on if the user is signed in-->
+					<li><a href="{% url 'login' %}">{{account_nav}}</a></li> <!--Either "Welcome username" or "Sign-In/Up" depending on if the user is signed in-->
 				{% endif %}
-				{% if username != "Sign-In/Up" %}
+				{% if account_nav != "Login" and account_nav != "Sign-Up" %}
 				{% if active == 'Dashboard' %}
 					<li><a class='active' href="#dashboard">Dashboard</a></li>
 				{% else %}
