Moved login authentication to the cleaning of data in the form Styled the form/form.html to display errors properly

--- a/code/glucocheck/homepage/static/form/style.css
+++ b/code/glucocheck/homepage/static/form/style.css
@@ -87,3 +87,10 @@ input.no_icon {
 p.no_icon {
 	text-align: center;
 }
+
+.center ul.errorlist {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+}
