--- a/code/glucocheck/homepage/templates/form/form.html
+++ b/code/glucocheck/homepage/templates/form/form.html
@@ -30,7 +30,9 @@
 	
 	<!--Display form errors, may need to be placed in a div-->
 	{% for form in forms %}
-		{{form.errors}}
+		{% for name, error in form.errors.items %}
+			{{error}}
+		{% endfor %}
 	{% endfor %}
 	</form>
 </div>
