--- a/code/glucocheck/homepage/templates/account/login_extra.html
+++ b/code/glucocheck/homepage/templates/account/login_extra.html
@@ -1,3 +1,6 @@
 <div class="row">
 	<p class="no_icon">Don't have an account?&emsp;<a href="{% url 'signup' %}">Sign-Up</a></p>
 </div>
+<div class="row">
+	<p class="no_icon"><a href="{% url 'reset_password_email' %}">Forgot Password?</a></p>
+</div>
