--- a/code/glucocheck/homepage/templates/account/login_extra.html
+++ b/code/glucocheck/homepage/templates/account/login_extra.html
@@ -1,6 +1,5 @@
-<div class="row">
-	<p class="no_icon">Don't have an account?&emsp;<a href="{% url 'signup' %}">Sign-Up</a></p>
-</div>
-<div class="row">
-	<p class="no_icon"><a href="{% url 'reset_password_email' %}">Forgot Password?</a></p>
-</div>
+	<img src="../images/arrow.png">
+	<h3>You do not have an account yet?</h3>
+	<p>Click below to create new account</p>
+	<button type="button" class="btn btn-primary">SIGN UP</button>
+
