--- a/code/glucocheck/homepage/static/base/style.css
+++ b/code/glucocheck/homepage/static/base/style.css
@@ -1,102 +1,237 @@
-body {
-	margin: 0;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Quicksand', sans-serif;
 }
 
-/*HEADER STYLE*/
-/* Add a black background color to the top navigation */
-.header {
-  background-color: #333;
-  overflow: hidden;
-  margin: 0;
-}
-/*Style the logo and slogan*/
-.header p, .header i {
-	float: left;
-	color: #f2f2f2;
-	text-align: center;
-	font-size: 17px;
-	margin: 0;
-	padding: 14px 16px;
-}
-/*Style the link list*/
-.header ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-}
-/* Style the links inside the navigation bar */
-.header a {
-  float: right;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-/* Change the color of links on hover */
-.header a:hover {
-  background-color: #ddd;
-  color: black;
-}
-/* Add a color to the active/current link */
-.header a.active {
-  background-color: #4CAF50;
-  color: white;
+#header{
+    height: 100vh;
+    width: 100%;
+    background-image: url(../images/homepagegluco.jpg);
+    background-position:center;
+    background-size: cover;
 }
 
-/*FOOTER STYLE*/
-/*Set the background color of the footer*/
-.footer {
-  background-color: #333;
-  overflow: hidden;
-}
-/*Color the column links and titles*/
-.footer .column a, .footer .column h2 {
-	color: #f2f2f2;
-	text-align: center;
-}
-/*Style the list containing links*/
-.footer .column ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	text-align: center;
-}
-/*Horizontally space the columns*/
-.footer .column {
-	float: left;
-	width: 50%;
-}
-/*Style the logo*/
-.footer p, .footer i {
-	float: left;
-	color: #f2f2f2;
-	text-align: center;
-	font-size: 17px;
-	margin: 0;
-	padding: 14px 16px;
-}
-/*Style the trademark*/
-.footer i {
-	float: left;
-	color: #f2f2f2;
-	text-align: center;
-	font-size: 12px;
-	margin: 0;
-	padding: 14px 16px;
-}
-/*Necessary for column division*/
-.footer:after {
-	content: "";
-	display: table;
-	clear: both;
+.navbar{
+    width: 70%;
+    margin: auto;
+    padding: 25px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-div#spacer_top, div#spacer_bottom {
-	height: 0;
+
+.logo{
+    width: 200px;
+    cursor: pointer;
 }
 
-div#content {
-	margin: 0;
-	padding: 0;
+.navbar ul li{
+    list-style: none;
+    display: inline-block;
+    margin: 0 15px;
+    position: relative;
+    
+    
 }
+
+.navbar ul li a{
+    text-decoration: none;
+    color: #262261;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 15px;
+}
+
+
+.navbar ul li::after{
+    content: '';
+    height: 1px;
+    width: 0%;
+    background: #8cc63e;
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    transition: 0.5s;
+     
+}
+
+.navbar ul li:hover::after{
+    width: 100%;
+}
+
+.header-text{
+    width: 100%;
+    position: absolute;
+    top: 70%;
+    transform: translateY(-50%);
+    text-align: left;
+    margin-left: 100px;
+    
+}
+.title{
+    font-size: 30px;
+    line-height: 60px;
+    font-weight: bold;
+    height: 100px;
+    color: #262261;
+    font-family: 'Nixie One', cursive;
+    text-align: left;
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    overflow: hidden;
+}
+
+
+.slider{
+    color: #f67c92;
+
+    margin-top: 180px;
+    margin-left: 10px;
+    animation: slider 6s linear infinite;
+}
+
+
+@keyframes slider{
+    0%{ margin-top: -240px; }
+    5%{ margin-top: -120px; }
+    30%{ margin-top: -120px; }
+    35%{ margin-top: -60px; }
+    65%{ margin-top: -60px; }
+    70%{ margin-top: 0px; }
+    100%{ margin-top: 0px; }
+}
+
+.header-text p{
+    max-width: 350px;
+    margin: 20px;
+    font-weight: 100;
+    line-height: 25px;
+    font-size: 15px;
+    color: #262261 
+    
+}
+
+.common-btn{
+    padding: 18px 40px;
+    margin: 20px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    border: 2px solid #000;
+    color: #262261;
+    cursor: pointer;
+    background: linear-gradient(to left, transparent 50%, #f67c92 50%);
+    background-size: 200%;
+    background-position: right;
+    transition: background-position 0.5s;
+}
+.common-btn:hover{
+    background-position:left;
+    color: #000;
+}
+
+
+/*
+.common-btn{
+    padding: 18px 40px;
+    background: transparent;
+    outline: none;
+    border: 2px solid #f67c92;
+    font-weight: bold;
+    cursor: pointer;
+}
+*/
+
+
+
+
+   
+
+
+
+/*------about--------*/
+
+#about{
+    padding: 100px;
+    display: flex;
+    align-items: right;
+    flex-wrap: wrap;
+    color: #262261;
+    font-family: 'Nixie One', cursive;
+}
+
+.about-left-col{
+    flex-basis: 50%;
+}
+.about-left-col img{
+    width: 100%;
+}
+
+.about-right-col{
+    flex-basis: 50%;
+    text-align: right;
+}
+
+.about-text{
+    max-width: 400px;
+    margin-right: 100px;
+    display: inline-block;
+}
+
+
+/*------footer--------*/
+
+#footer{
+    padding: 50px 0 50px;
+    margin-right: 80px;
+    margin-left: 80px;
+}
+hr{
+    width: 100%;
+    border: 0;
+    border-top: 2px solid #262261;
+}
+
+.footer-row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer-left-col{
+    flex-basis: 55%;
+    font-size: 15px;
+}
+
+.footer-right-col{
+    flex-basis: 0%;
+    
+}
+
+.footer-logo{
+    width: 200px;
+    cursor: pointer;
+}
+
+.footer-links{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.link-title h4{
+    color: #fab3c4;
+    margin-bottom: 20px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.link-title small{
+    font-size: 13px;
+    color:cornflowerblue;
+}
+
+
+
