--- a/code/glucocheck/homepage/static/form/style.css
+++ b/code/glucocheck/homepage/static/form/style.css
@@ -1,96 +1,192 @@
-/*Center the content container*/
-.center {
-	box-sizing: border-box;
-	margin: auto;
-	width: 400px;
-	padding: 20px;
-	background-color: #DFEFC7;
-	display: flex;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
-
-/*Icon sizing and coloring*/
-.icon {
-	box-sizing: border-box;
-	width: 30px;
-	padding: 8px;
-	background-color: #652D90;
-	fill: white;
-}
-
-/*Add padding to the icon column*/
-.row .column {
-	float: left;
-	padding-right: 2px;
-}
-
-/*Add padding to rows*/
-.row {
-	padding-bottom: 5px;
-}
 
 
-
-/*Size input boxes*/
-.row input {
-	box-sizing: border-box;
-	height: 32px;
-	width: 320px;
-}
-/*Size the checkbox input*/
-.row input[type=checkbox] {
-	box-sizing: border-box;
-	height: 15px;
-	width: 15px;
-	margin-top: 8px;
-}
-/*Size and center the accompanying text for the CheckBoxLink widget*/
-.row .column p {
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
-	margin-top: 8px;
-	margin-left: 5px;
-}
-/*Size select boxes*/
-.row select {
-	box-sizing: border-box;
-	height: 32px;
+.navbar{
+    width: 70%;
+    margin: auto;
+    padding: 25px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+.logo{
+    width: 200px;
+    cursor: pointer;
 }
 
-/*Align and color the form title*/
-h3.no_icon {
-	text-align: center;
-	color: #652D90;
+.navbar ul li{
+    list-style: none;
+    display: inline-block;
+    margin: 0 15px;
+    position: relative;
+    
+    
 }
 
-/*Align and color the input boxes*/
-input.no_icon {
-	width: 60%;
-	margin-left: 20%;
-	margin-right: 20%;
-	color: white;
-	background-color: #652D90;
+.navbar ul li a{
+    text-decoration: none;
+    color: #262261;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 15px;
 }
 
-/*Align additional content*/
-p.no_icon {
-	text-align: center;
+.navbar ul li::after{
+    content: '';
+    height: 1px;
+    width: 0%;
+    background: #8cc63e;
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    transition: 0.5s;
 }
 
-.center ul.errorlist {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	text-align: center;
+.navbar ul li:hover::after{
+    width: 100%;
 }
+
+
+.container{
+    
+    margin-top: 150px !important;
+}
+
+.register-left{
+    text-align: center;
+    color: #262261;
+    padding: 30px;
+}
+
+.register-left p{
+    
+    padding: 20px 20px 0;
+}
+
+.register-left .btn-primary{
+    border: none;
+    border-radius: 1.5rem;
+    width: 120px;
+    background: #f8f8f8;
+    font-weight: 600;
+    color: #262261;
+    margin-top: 20px;
+    padding: 10px;
+}
+.register-left .btn-primary:hover{
+    background: #fab3c4;
+}
+
+.register-left img{
+    margin-top: 20px;
+    margin-bottom: 18px;
+    width: 80px;
+    animation: mover 1s infinite alternate;
+}
+
+
+.register-right{
+    margin-top: 30px;
+    margin-left: 0px;
+    width: 180px;
+    height: 400px;
+    border: none;
+    background: linear-gradient(to right, #f9dce4, #c0e6ff);
+    color: #262261;
+    border-bottom-right-radius: 10% 50%;
+    border-top-right-radius: 10% 50%;
+    padding: 30px;
+    font-family: 'Nixie One', cursive;
+}
+   
+.register-right h2{
+    text-align: center;
+    margin-bottom: 20px;
+    color: #262261;
+}
+
+.register-form{
+    padding: 15px;
+    
+    
+}
+
+
+.register-right .btn-primary{
+    float: right;
+    border: none;
+    border-radius: 1.5rem;
+    width: 120px;
+    background:  #c0e6ff;
+    font-weight: 600;
+    color: #262261;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+.register-right .btn-primary:hover{
+    background: #fab3c4;
+}
+
+@keyframes mover{
+    0%{transform: translateY(0);}
+    100%{transform: translateY(-20px);}
+    
+}
+
+
+
+/*------footer--------*/
+
+#footer{
+    padding: 50px 0 50px;
+    margin-right: 80px;
+    margin-left: 80px;
+}
+hr{
+    width: 100%;
+    border: 0;
+    border-top: 2px solid #262261;
+}
+
+.footer-row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer-left-col{
+    flex-basis: 55%;
+    font-size: 15px;
+}
+
+.footer-right-col{
+    flex-basis: 0%;
+    
+}
+
+.footer-logo{
+    width: 200px;
+    cursor: pointer;
+}
+
+.footer-links{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.link-title h4{
+    color: #fab3c4;
+    margin-bottom: 20px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.link-title small{
+    font-size: 13px;
+    color:cornflowerblue;
+}
+
+
+
