--- a/code/glucocheck/homepage/templates/account/login_extra.html
+++ b/code/glucocheck/homepage/templates/account/login_extra.html
@@ -1,5 +1,6 @@
-	<img src="../images/arrow.png">
-	<h3>You do not have an account yet?</h3>
-	<p>Click below to create new account</p>
-	<button type="button" class="btn btn-primary">SIGN UP</button>
+{% load static %}
+<img src="{% static 'images/arrow.png' %}">
+<h3>You do not have an account yet?</h3>
+<p>Click below to create new account</p>
+<button type="button" class="btn btn-primary">SIGN UP</button>
 
