--- a/code/glucocheck/homepage/static/homepage/style.css
+++ b/code/glucocheck/homepage/static/homepage/style.css
@@ -1,34 +1,219 @@
-* {
-	box-sizing: border-box;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Quicksand', sans-serif;
 }
 
-.container {
-	padding: 64px;
+#header{
+    height: 100vh;
+    width: 100%;
+    background-image: url(../images/homepagegluco.jpg);
+    background-position:center;
+    background-size: cover;
 }
 
-/*Necessary for column division*/
-.container .row:after {
-  content: "";
-  display: table;
-  clear: both
+.navbar{
+    width: 70%;
+    margin: auto;
+    padding: 25px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-/* 2/3 column */
-.container .column-66 {
-  float: left;
-  width: 66.66666%;
-  padding: 20px;
+
+.logo{
+    width: 200px;
+    cursor: pointer;
 }
 
-/* 1/3 column */
-.container .column-33 {
-  float: left;
-  width: 33.33333%;
-  padding: 20px;
+.navbar ul li{
+    list-style: none;
+    display: inline-block;
+    margin: 0 15px;
+    position: relative;
+    
+    
 }
 
-/*Color content text*/
-.container .row h2, .container .row p {
-	color: black;
-	text-align: left;
+.navbar ul li a{
+    text-decoration: none;
+    color: #262261;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 15px;
 }
+
+
+.navbar ul li::after{
+    content: '';
+    height: 1px;
+    width: 0%;
+    background: #8cc63e;
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    transition: 0.5s;
+     
+}
+
+.navbar ul li:hover::after{
+    width: 100%;
+}
+
+/*Content 1*/
+.header-text{
+    width: 100%;
+    position: absolute;
+    top: 70%;
+    transform: translateY(-50%);
+    text-align: left;
+    margin-left: 100px;
+    
+}
+.title{
+    font-size: 30px;
+    line-height: 60px;
+    font-weight: bold;
+    height: 100px;
+    color: #262261;
+    font-family: 'Nixie One', cursive;
+    text-align: left;
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    overflow: hidden;
+}
+
+
+.slider{
+    color: #f67c92;
+
+    margin-top: 180px;
+    margin-left: 10px;
+    animation: slider 6s linear infinite;
+}
+
+
+@keyframes slider{
+    0%{ margin-top: -240px; }
+    5%{ margin-top: -120px; }
+    30%{ margin-top: -120px; }
+    35%{ margin-top: -60px; }
+    65%{ margin-top: -60px; }
+    70%{ margin-top: 0px; }
+    100%{ margin-top: 0px; }
+}
+
+.header-text p{
+    max-width: 350px;
+    margin: 20px;
+    font-weight: 100;
+    line-height: 25px;
+    font-size: 15px;
+    color: #262261 
+    
+}
+
+.common-btn{
+    padding: 18px 40px;
+    margin: 20px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    border: 2px solid #000;
+    color: #262261;
+    cursor: pointer;
+    background: linear-gradient(to left, transparent 50%, #f67c92 50%);
+    background-size: 200%;
+    background-position: right;
+    transition: background-position 0.5s;
+}
+.common-btn:hover{
+    background-position:left;
+    color: #000;
+}
+/*End content 1*/
+
+/*------about--------*/
+
+#about{
+    padding: 100px;
+    display: flex;
+    align-items: right;
+    flex-wrap: wrap;
+    color: #262261;
+    font-family: 'Nixie One', cursive;
+}
+
+.about-left-col{
+    flex-basis: 50%;
+}
+.about-left-col img{
+    width: 100%;
+}
+
+.about-right-col{
+    flex-basis: 50%;
+    text-align: right;
+}
+
+.about-text{
+    max-width: 400px;
+    margin-right: 100px;
+    display: inline-block;
+}
+/*End content 2*/
+
+/*Footer*/
+/*------footer--------*/
+
+#footer{
+    padding: 50px 0 50px;
+    margin-right: 80px;
+    margin-left: 80px;
+}
+.container.footer-row hr{
+    width: 100%;
+    border: 0;
+    border-top: 2px solid #262261;
+}
+
+.footer-row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer-left-col{
+    flex-basis: 55%;
+    font-size: 15px;
+}
+
+.footer-right-col{
+    flex-basis: 0%;
+    
+}
+
+.footer-logo{
+    width: 200px;
+    cursor: pointer;
+}
+
+.footer-links{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.link-title h4{
+    color: #fab3c4;
+    margin-bottom: 20px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.link-title small{
+    font-size: 13px;
+    color:cornflowerblue;
+}
+/*End footer*/
