--- a/code/glucocheck/homepage/templates/account/get_email.html
+++ b/code/glucocheck/homepage/templates/account/get_email.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nixie+One&family=Stint+Ultra+Expanded&display=swap" rel="stylesheet">
 {% endblock %}
 
-{% block title %}Reset Password{% endblock %}
+{% block title %}Input Email{% endblock %}
 
 {% block content %}
 	<!--Import Form content-->
