--- a/code/glucocheck/homepage/templates/account/signup_extra.html
+++ b/code/glucocheck/homepage/templates/account/signup_extra.html
@@ -1,3 +1,5 @@
-<div class="row">
-	<p class="no_icon">Already have an account?&emsp;<a href="{% url 'login' %}">Login</a></p>
-</div>
+{% load static %}
+<img src="{% static 'images/arrow.png' %}">
+<h3>Do you have an account?</h3>
+<p>Click below to login to your account</p>
+<a class="btn btn-primary" href="{% url 'login'%}">LOG IN</a>
