--- a/code/glucocheck/homepage/static/form/style.css
+++ b/code/glucocheck/homepage/static/form/style.css
@@ -40,7 +40,7 @@
     margin-top: 30px;
     margin-left: 0px;
     width: 180px;
-    height: 400px;
+    /*height: 400px;*/
     border: none;
     background: linear-gradient(to right, #f9dce4, #c0e6ff);
     color: #262261;
