--- a/code/glucocheck/homepage/templates/account/get_email.html
+++ b/code/glucocheck/homepage/templates/account/get_email.html
@@ -3,9 +3,7 @@
 {% block extra_style %}
 	{% load static %}
 	<link rel="stylesheet" type="text/css" href="{% static 'form/style.css' %}">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nixie+One&family=Stint+Ultra+Expanded&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="{% static 'form/bootstrap.css' %}">
 {% endblock %}
 
 {% block title %}Input Email{% endblock %}
