formatting TNC page

--- a/code/glucocheck/homepage/templates/tnc/tnc.html
+++ b/code/glucocheck/homepage/templates/tnc/tnc.html
@@ -8,6 +8,7 @@
 {% block title %}Terms and Conditions{% endblock %}
 
 {% block content %}
+<section id="privacy">
 	<div class='section'>
 		<h2>Privacy Policy</h2><hr>
 		<h3>Who We Are</h3>
@@ -48,17 +49,20 @@
 		
 		
 		<h3>How can you contact us about your information?</h3>
-		<p>You may wish to contact us about your information for several reasons. To do so, you may email us at compliance@tandemdiabetes.com</p><br>
+		<p>You may wish to contact us about your information for several reasons. To do so, you may email us at support@glucocheck.com</p><br>
 		
 		<h3>What Are Your Rights Concerning Your Data?</h3>
 		<p>You have several legal rights concerning your personal data we collect and use. Depending on where you live, these may include the right to access your data, correct or amend your data, request an accounting of disclosures of your data, object to our use of your data, and to lodge a complaint with appropriate government agencies.</p>
 		<p>Please note that in some circumstances Glucocheck may not be able, or may refuse, to honor your access, amendment, or accounting requests. Tandem can do so if, for example, honoring your request would reveal information protected by law, or if doing so would reveal confidential commercial information.</p>
 		<p>For more information about your HIPAA rights, or how to exercise any of them, please read the relevant Privacy Notices listed in the scope of this notice section. You can also contact us with any questions or concerns by mail or by email at the addresses provided above in the who we are and how can you contact us about your information sections.</p><br>
 	</div>
-	
+
+</section>
+
+<section id="terms">
 	<div class='section'>
 		<h2>Terms of Use</h2><hr>
-		<p>This Website, www.glucocheck.com (“Website”), is hosted by (" "), Inc. (“GlucoCheck”). GlucoCheck has also developed and offers other applications through the Website or through other means, including, without limitation, the t:connect Diabetes Management Application and the t:simulator App (referred to individually as a “Program” or collectively, with other applications, as the “Programs”).</p>
+		<p>This Website, <a href="www.glucocheck.com">www.glucocheck.com</a> (“Website”), is hosted by (" "), Inc. (“GlucoCheck”). GlucoCheck has also developed and offers other applications through the Website or through other means, including, without limitation, the t:connect Diabetes Management Application and the t:simulator App (referred to individually as a “Program” or collectively, with other applications, as the “Programs”).</p>
 		<p>IT IS IMPORTANT THAT YOU READ CAREFULLY AND UNDERSTAND THESE TERMS OF USE (THIS “AGREEMENT”). BY CLICKING THE “I ACCEPT” BUTTON OR USING THE WEBSITE AND/OR PROGRAMS, YOU ACKNOWLEDGE THAT (1) YOU HAVE READ AND REVIEWED THIS AGREEMENT IN ITS ENTIRETY, (2) YOU AGREE TO BE BOUND BY THIS AGREEMENT, (3) THE INDIVIDUAL SO CLICKING OR USING HAS THE POWER, AUTHORITY AND LEGAL RIGHT TO ENTER INTO THIS AGREEMENT ON BEHALF OF YOU (AS AN INDIVIDUAL IF ON YOUR OWN BEHALF OR AS A PARENT OR GUARDIAN FOR A MINOR (“YOU” OR “YOUR”)) AND, (4) BY SO CLICKING OR USING, THIS AGREEMENT CONSTITUTES BINDING AND ENFORCEABLE OBLIGATION BETWEEN YOU AND GlucoCheck. IF YOU DO NOT AGREE WITH ALL THE TERMS OF THIS AGREEMENT AND DO NOT AGREE TO BE BOUND BY THIS AGREEMENT, PLEASE DO NOT CLICK BELOW.</p>
 		<p>When you use any current or future version of the Website or Programs, you also will be subject to the terms and conditions set forth in this Agreement. Please print a copy of this Agreement for your records. We may, from time to time, modify the terms of this Agreement. When we make changes, we will post those in a new Terms of Use on this Website. Your use of the Website and Programs following any such modification constitutes your agreement to the terms of the modified Agreement. You should visit this page periodically to learn of any changes to this Agreement.</p>
 		<p>We may discontinue the Website or a Program at any time and for any reason, without notice. We may change the contents, operation, or any and all other features of the Website or a Program at any time for any reason, without notice. We may discontinue or restrict your use of the Website or a Program at any time for any reason, without notice.</p><br>
@@ -120,7 +124,9 @@
 			<p>This Agreement, including GlucoCheck’s Privacy Policy, and any applicable Program EULA constitutes the entire agreement between the parties and supersedes all prior or contemporaneous agreements or representations, written or oral, concerning the subject matter of this Agreement. This Agreement may not be modified or amended except in a writing signed by both parties; no other act, document, usage or custom will be deemed to amend or modify this Agreement.</p><br>		
 		</ul>
 	</div>
-	
+</section>
+
+<section id="cookie">
 	<div class='section'>
 		<h2>Cookie Policy</h2><hr>
 		<h3>What is a cookie?</h3>
@@ -134,9 +140,11 @@
 		
 		<h3>How do I change my cookie settings?</h3>
 		<p>Your browser or device may allow you to block certain cookies, remove cookies, or notify you when a cookie is set by editing your web browser preferences or options. You do not have to accept all cookies that we send you; however, please understand that cookies are an important part of how our services work, so removing, rejecting, or limiting our use of cookies could impact your ability to use parts of our website or app.</p>
-		<p>Within your browser, you can choose whether you wish to accept cookies or not. Different browsers make different controls available to you. For additional information, you can refer to: www.aboutcookies.org/how-to-delete-cookies</p><br>
+		<p>Within your browser, you can choose whether you wish to accept cookies or not. Different browsers make different controls available to you. For additional information, you can refer to: <a href="www.aboutcookies.org/how-to-delete-cookies">www.aboutcookies.org/how-to-delete-cookies</a></p><br>
 	</div>
-	
+</section>
+
+<section id="hipaa">	
 	<div class='section'>
 		<h2>Notice of HIPAA Privacy Practices</h2><hr>
 		<p>The following summarizes your rights, your choices, and how your personal health information may be shared under this Notice of HIPAA Privacy Practices.</p><br>
@@ -205,8 +213,8 @@
 		<p>If you have given someone medical power of attorney or if someone is your legal guardian, that person can exercise your rights and make choices about your health information. We will make sure the person has this authority and can act for you before we take any action.</p><br>
 		
 		<h3>FILE A COMPLAINT IF YOU FEEL YOUR RIGHTS ARE VIOLATED</h3>
-		<p>You can complain if you feel we have violated your rights by contacting us at compliance@tandemdiabetes.com</p>
-		<p>You can file a complaint with the U.S. Department of Health and Human Services Office for Civil Rights by sending a letter to 200 Independence Avenue, S.W., Washington, D.C. 20201, visiting www.hhs.gov/hipaa/filing-a-complaint/what-to-expect/index.html, or calling (877) 696-6775. We will not retaliate against you for filing a complaint.</p><br>
+		<p>You can complain if you feel we have violated your rights by contacting us at support@glucocheck.com</p>
+		<p>You can file a complaint with the U.S. Department of Health and Human Services Office for Civil Rights by sending a letter to 200 Independence Avenue, S.W., Washington, D.C. 20201, visiting <a href="www.hhs.gov/hipaa/filing-a-complaint/what-to-expect/index.html">www.hhs.gov/hipaa/filing-a-complaint/what-to-expect/index.html</a>, or calling (877) 696-6775. We will not retaliate against you for filing a complaint.</p><br>
 		
 		<h3>Your Choices</h3>
 		<p>For certain health information, you can tell us your choices about what we share. If you have a clear preference for how we share your information in the situations described below, talk to us. Tell us what you want us to do, and we will follow your instructions.</p>
@@ -237,7 +245,7 @@
 		</ul><br>
 		
 		<p>HOW ELSE CAN WE USE OR SHARE YOUR HEALTH INFORMATION?</p>
-		<p>We are allowed or required to share your information in other ways – usually in ways that contribute to the public good, such as public health and research. We have to meet many conditions in the law before we can share your information for these purposes. For more information see: www.hhs.gov/hipaa/for-individuals/guidance-materials-for-consumers/index.html</p><br>
+		<p>We are allowed or required to share your information in other ways – usually in ways that contribute to the public good, such as public health and research. We have to meet many conditions in the law before we can share your information for these purposes. For more information see: <a href="www.hhs.gov/hipaa/for-individuals/guidance-materials-for-consumers/index.html">www.hhs.gov/hipaa/for-individuals/guidance-materials-for-consumers/index.html</a></p><br>
 		
 		<p>Help with public health and safety issues:</p>
 		<p>We can share health information about you for certain situations such as:</p>
@@ -275,6 +283,7 @@
 			<li>We must follow the duties and privacy practices described in this Notice and give you a copy of it.</li>
 			<li>We will not use or share your information other than as described here unless you tell us we can in writing. If you tell us we can, you may change your mind at any time. Let us know in writing if you change your mind.</li>
 		</ul>
-		<p>For more information see: www.hhs.gov/hipaa/for-individuals/notice-privacy-practices/index.html</p><br>
-	</div>	
+		<p>For more information see: <a href="www.hhs.gov/hipaa/for-individuals/notice-privacy-practices/index.html">www.hhs.gov/hipaa/for-individuals/notice-privacy-practices/index.html</a></p><br>
+	</div>
+</section>	
 {% endblock %}
