--- a/code/glucocheck/homepage/static/tnc/style.css
+++ b/code/glucocheck/homepage/static/tnc/style.css
@@ -1,11 +1,52 @@
-div.section {
-	margin-left: 50px;
-	margin-right: 50px;
-	background-color: #DFEFC7;
-	padding: 20px;
+*{
+   
+    font-family: 'Quicksand', sans-serif;
 }
 
-.section h2 {
-	color: #652D90;
+.section{
+    max-width: 1000px;
+	margin: 100px;
+    padding: 40px;
+    align-items: center;
+    font-weight: 100;
+    line-height: 20px;
+    font-size: 18px;
+    color: #262261 
+    
 }
 
+.section h2{
+    font-family: 'Nixie One', cursive;
+    color: #f67c92;
+    margin-bottom: 8px;
+   
+}
+
+.section h3{
+    font-size: 18px;
+    color:cornflowerblue;
+    font-family: 'Nixie One', cursive;
+    margin-bottom: 15px;
+    margin-top: 20px;
+}
+
+.section p{
+    margin-top: 20px;
+}
+
+hr{
+    width: 100%;
+    border: 0;
+    border-top: 1px solid  #8cc63e;
+}
+
+.section ul li{
+    margin-left: 50px;
+}
+
+a{
+    text-decoration: none;
+    color: blue;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 18px;
+}
