Added in correct hyperlinks The hyperlink in the TNC widget has been hardcoded, as the template wasnt being filled Added the account_nav context to the homepage/base.html Added in forgot password hyperlink

--- a/code/glucocheck/homepage/templates/account/login_extra.html
+++ b/code/glucocheck/homepage/templates/account/login_extra.html
@@ -3,4 +3,5 @@
 <h3>You do not have an account yet?</h3>
 <p>Click below to create new account</p>
 <a class="btn btn-primary" href="{% url 'signup' %}">SIGN UP</a>
+<a class="btn btn-primary" href="{% url 'reset_password_email' %}">Forgot Password?</a>
 
