--- a/code/glucocheck/homepage/templates/account/account_activation_email.html
+++ b/code/glucocheck/homepage/templates/account/account_activation_email.html
@@ -1,7 +1,7 @@
 {% autoescape off %}
 Hi {{ user.username }},
 
-Please click the following link to confirm your registration:
+Please click the following link to change your password:
 
 http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
 {% endautoescape %}
