--- a/code/glucocheck/homepage/templates/account/reset_password_email.html
+++ b/code/glucocheck/homepage/templates/account/reset_password_email.html
@@ -1,7 +1,7 @@
 {% autoescape off %}
 Hi {{ user.username }},
 
-Please click the following link to confirm your registration:
+Please click the following link to reset your password:
 
 http://{{ domain }}{% url 'reset_password' uidb64=uid token=token %}
 {% endautoescape %}
