--- a/code/glucocheck/homepage/templates/form/form.html
+++ b/code/glucocheck/homepage/templates/form/form.html
@@ -1,33 +1,45 @@
-<div class="container">
-    <div class="row">
-		<div class="col-md-10 offset=md-1">
-			<div class="row">
-				<div class="col-md-5 register-left">
-					{% if additional_html %}
-						{% include additional_html %}
-					{% endif %}
-				</div>
-				<div class="col-md-7 register-right">
-					<h2>{{form_title}}</h2>
-					<form action="" method="post">
-                    {% csrf_token %}
-					<div class="register-form">
-    
-						{% for form in forms %}
-							{% for field in form %}
-								<div class="form-group">{{field}}</div>
-							{% endfor %}
-						{% endfor %}
-						<input type="submit" class="btn btn-primary" value={{submit_value}}>
-						{% for form in forms %}
-							{% for name, error in form.errors.items %}
-								{{error}}
-							{% endfor %}
-						{% endfor %}
+{% extends "base/base.html" %}
+
+{% block extra_style %}
+	{% load static %}
+	<link rel="stylesheet" type="text/css" href="{% static 'form/style.css' %}">
+	<link rel="stylesheet" href="{% static 'form/bootstrap.css' %}">
+{% endblock %}
+
+{% block title %}{{page_title}}{% endblock %}
+
+{% block content %}
+	<div class="container">
+		<div class="row">
+			<div class="col-md-10 offset=md-1">
+				<div class="row">
+					<div class="col-md-5 register-left">
+						{% if additional_html %}
+							{% include additional_html %}
+						{% endif %}
 					</div>
-                    </form>
-				</div>
-			</div>    
-        </div>
-    </div>
-</div>
+					<div class="col-md-7 register-right">
+						<h2>{{form_title}}</h2>
+						<form action="" method="post">
+						{% csrf_token %}
+						<div class="register-form">
+		
+							{% for form in forms %}
+								{% for field in form %}
+									<div class="form-group">{{field}}</div>
+								{% endfor %}
+							{% endfor %}
+							<input type="submit" class="btn btn-primary" value={{submit_value}}>
+							{% for form in forms %}
+								{% for name, error in form.errors.items %}
+									{{error}}
+								{% endfor %}
+							{% endfor %}
+						</div>
+						</form>
+					</div>
+				</div>    
+			</div>
+		</div>
+	</div>
+{% endblock %}
