--- a/code/glucocheck/homepage/static/base/style.css
+++ b/code/glucocheck/homepage/static/base/style.css
@@ -91,15 +91,16 @@
     flex-wrap: wrap;
 }
 
-.link-title h4{
+.link-title h4 a{
     color: #fab3c4;
+	text-decoration: none;
     margin-bottom: 20px;
     justify-content: space-between;
     flex-wrap: wrap;
 }
 
 .link-title small{
-    font-size: 13px;
+    font-size: 16px;
     color:cornflowerblue;
 }
 
